--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,10 +24,14 @@
     <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
     <string name="read_barcode">Read Barcode</string>
     <string name="auto_focus">Auto Focus</string>
-    <string name="use_flash">Use Flash</string>
+    <string name="use_flash">Utiliser le Flash: </string>
+    <string name="use_scan">Scan des billets: </string>
     <string name="barcode_success">Barcode read successfully</string>
     <string name="barcode_failure">No barcode captured</string>
     <string name="barcode_error">"Error reading barcode: %1$s"</string>
     <string name="grant">GRANT</string>
     <string name="cancel">CANCEL</string>
+    <string name="stats_tickets_scanned">Tickets scannés:</string>
+    <string name="stats_tickets_payed">Tickets payés:</string>
+    <string name="stats_tickets_payed_scanned">Tickets s + p:</string>
 </resources>
